# random_number_generator_learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GBT32915.md  README.md
scripts/: build_testu01.sh
src/: CMakeLists.txt  mt19937.c  mt19937.cpp  mt19937.h  mt19937.hpp  sfc32.c  sfc32.cpp  sfc32.h  sfc32.hpp
tests/: CMakeLists.txt  test.cpp  test_mt19937.cpp  test_sfc32.cpp  testu01_test.cpp
